cmake_minimum_required(VERSION 3.5)
project(PSOPT)
set(CMAKE_CXX_STANDARD 11)

set(USERHOME $ENV{HOME})
message(STATUS "HOME ENV -----> " ${USERHOME})

set(LUSOL_DIRECTORY ${USERHOME}/libs/optimization/lusol CACHE STRING "Lusol Directory")
set(SUITESPARSE_DIRECTORY ${USERHOME}/libs/optimization/SuiteSparse CACHE STRING "CXSparse Directory")
set(ADOLC_DIRECTORY ${USERHOME}/libs/optimization/adolc_base CACHE STRING "AdolC Directory")

set(LUSOL_BUILD_DIR ${LUSOL_DIRECTORY}/csrc)
set(CXSPARSE_BUILD_DIR ${SUITESPARSE_DIRECTORY}/CXSparse)

set(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:${IPOPT_BUILD_DIR}/lib/pkgconfig/" )
find_package(PkgConfig REQUIRED)
# message(STATUS "PKG CONFIG PATH     " ${PKG_CONFIG_PATH})
pkg_search_module(IPOPT REQUIRED ipopt)

message(STATUS "IPOPT_LIBRARY_DIRS  " ${IPOPT_LIBRARIES} )
message(STATUS "IPOPT_LIBRARIES  " ${IPOPT_LIBRARIES} )
message(STATUS "IPOPT_LDFLAGS  " ${IPOPT_LDFLAGS} )
message(STATUS "IPOPT_INCLUDE_DIRS  " ${IPOPT_INCLUDE_DIRS} )
message(STATUS "IPOPT_CFLAGS  " ${IPOPT_CFLAGS} )

# include directories
set(LUSOL_INCLUDE_DIRS ${LUSOL_BUILD_DIR})
set(CXSPARSE_INCLUDE_DIRS
        ${CXSPARSE_BUILD_DIR}/Include
        ${SUITESPARSE_DIRECTORY}/SuiteSparse_config)
set(ADOLC_INCLUDE_DIRS
        ${ADOLC_BUILD_DIR}/include)

#set(PSOPT_THIRDPARTY_INCLUDE_DIRS
#        ${LUSOL_INCLUDE_DIRS}
#        ${CXSPARSE_INCLUDE_DIRS})


# message(STATUS "PSOPT_THIRDPARTY_INCLUDE_DIRS -----> " "${PSOPT_THIRDPARTY_INCLUDE_DIRS}")

# lib directories
set(LUSOL_LIBRARY_DIRS ${LUSOL_BUILD_DIR})
set(CXSPARSE_LIBRARY_DIRS ${CXSPARSE_BUILD_DIR}/Lib)
set(ADOLC_LIBRARY_DIRS ${ADOLC_BUILD_DIR}/lib64)
message(STATUS "ADOLC_LIBRARY_DIRS ------> " ${ADOLC_LIBRARY_DIRS})

#set(PSOPT_THIRDPARTY_LIBRARY_DIRS
#        ${IPOPT_LIBRARY_DIRS}
#        ${LUSOL_LIBRARY_DIRS}
#        ${CXSPARSE_LIBRARY_DIRS})
# message(STATUS "PSOPT_THIRDPARTY_LIBRARY_DIRS -----> " "${PSOPT_THIRDPARTY_LIBRARY_DIRS}")

# libs
set(LUSOL_LIBRARIES lusol)
set(CXSPARSE_LIBRARIES cxsparse)
set(ADOLC_LIBRARIES adolc ColPack)

#set(PSOPT_THIRDPARTY_LIBRARIES
#        ${IPOPT_LIBRARIES}
#        ${LUSOL_LIBRARIES}
#        ${CXSPARSE_LIBRARIES}
#        dl
#        )

# message(STATUS "PSOPT_THIRDPARTY_LIBRARIES -----> " "${PSOPT_THIRDPARTY_LIBRARIES}")

SET(PSOPT_GCC_COMPILE_FLASGS " -w")

add_subdirectory(dmatrix)
add_subdirectory(PSOPT)
